# Speechify

./: .gitignore  AGENTS.md  README.md  batch_synth.py  build_mara_extra.py  build_mara_hash.py  build_mara_rest.py  build_mara_trees.py  build_mara_voice.py  diag_ground_truth.py  patch_f0tr.py  vip_dicta.txt  wsola_boundary_smooth.py
reveng/: README.md  (+16 more)
spfy/: .gitignore  CMakeLists.txt  README.md  build.bat  build32.bat  build_emu.bat  build_hosted.bat  build_linux.sh  build_macos.sh  tts_triage.py
spfy/ci/: build_unix.sh
spfy/cmake/: Toolchain-sse-bisect.cmake  Toolchain-x87.cmake
spfy/data/: baked_pos.csv  en_us_engine_phone_ids.csv
spfy/fe-decomp/: README.md
spfy/fe-decomp/reports/: summary.md
spfy/fe-decomp/reports/tier3/: 0836835a_FUN_0836835a.md  0836abd0_FUN_0836abd0.md  0836b9f0_FUN_0836b9f0.md  0836ba20_FUN_0836ba20.md  0836ba40_FUN_0836ba40.md  0836ba60_FUN_0836ba60.md  0836ba80_FUN_0836ba80.md  0836baa0_FUN_0836baa0.md  0836bae0_FUN_0836bae0.md  0836bb10_FUN_0836bb10.md  0836bb40_FUN_0836bb40.md  0836bb70_FUN_0836bb70.md  0836bba0_FUN_0836bba0.md  0836dba0_FUN_0836dba0.md  0836f504_FUN_0836f504.md  0836fbf0_UserDict__findFirst.md  0836fd10_UserDict__findNext.md  0836fe00_UserDict__lookup.md  083704d0_DictionarySet__free.md  08370630_DictionarySet__activate.md  08370790_DictionarySet__deactivate.md  083707d0_DictionarySet__deactivate_byName.md  083708b0_DictionarySet__findFirst.md  08370940_DictionarySet__findNext.md  083709d0_DictionarySet__lookup.md  08370a60_DictionarySet__prioritizedLookup.md  08370de0_FUN_08370de0.md  08371320_UserDict__update.md  (+21 more)
spfy/include/spfy/: spfy.h  spfy_voice.h
spfy/src/cart/: CMakeLists.txt  cart.h  cart_eval.c  cart_load.c
spfy/src/cli/: CMakeLists.txt  spfy_anchor_replay.c  spfy_build_graph_replay.c  spfy_cart_replay.c  spfy_concat.c  spfy_dump_f0.c  spfy_dump_f0tr_ques.c  spfy_dump_voice.c  spfy_engine_graph_replay.c  spfy_fe_host_dump.c  spfy_fe_synth.c  spfy_fe_test.c  spfy_fe_text2tagged.c  spfy_g2p_dump.c  spfy_hash_replay.c  spfy_hp_score_test.c  spfy_pitch_shift.c  spfy_score_one.c  spfy_synth.c  spfy_synth_replay.c  spfy_text_norm_dump.c  spfy_time_stretch.c  spfy_viterbi_replay.c
spfy/src/common/: CMakeLists.txt  file_io.c  file_io.h  le.h  log.c  log.h  obfuscation.c  obfuscation.h  riff.c  riff.h
spfy/src/dsp/: CMakeLists.txt  pitch_shift.c  pitch_shift.h  time_stretch.c  time_stretch.h
spfy/src/fe/: CMakeLists.txt  baked_dict.h  baked_pos.c  baked_pos.h  fe.c  fe.h  phoneset.c  phoneset.h  prosody.c  prosody.h  stage_espr.c  stage_espr.h  stage_lts.c  stage_lts.h  stage_morph.c  stage_morph.h  stage_prosody.c  stage_prosody.h  stage_spr.c  stage_spr.h  stage_syl.c  stage_syl.h  stage_textnorm.c  stage_textnorm.h  stream.c  stream.h  tables.c  tables.h  vocab.c  vocab.h
spfy/src/fe_host/: CMakeLists.txt  embed_dll.py  fe_host.c  fe_host_emu.c  fe_no_refine.c  fe_no_refine.h  fe_parse.c  fe_parse.h  swittsfe_registry.c  swittsfe_registry.h  test_fe_parse.c
spfy/src/fe_internal/: CMakeLists.txt  fe_internal.c  fe_internal.h  pos_context.c  pos_context.h
spfy/src/g2p/: CMakeLists.txt  cmudict_data.h  g2p.c  g2p.h
spfy/src/host/: CMakeLists.txt  imports.c  imports.h  loader.c  loader.h  probe_vtable.c  test_loader.c  test_synth.c  tib_linux.c  vtable_inventory.md
spfy/src/host_emu/: CMakeLists.txt  PROTOCOL.md  README.md  STATUS.md  build.bat  cpu.c  emu.h  host_glue.c  loader.c  mem.c  spfy_dll_boot.c  spfy_dll_boot.h  spfy_extra_shims.c  test_emu_boot.c  win32_donor.c
spfy/src/sapi/: CMakeLists.txt  sapi_phone_table.h  sapiddk_min.h  spfy_sapi.c  spfy_sapi.def  spfy_sapi64.c  spfy_sapi64.def  spfy_sapi_host.c
spfy/src/synth/: CMakeLists.txt  spfy_synth_lib.c  spfy_synth_lib.h
spfy/src/text_norm/: CMakeLists.txt  text_norm.c  text_norm.h
spfy/src/usel/: CMakeLists.txt  anchor_score.c  anchor_score.h  build_graph.c  build_graph.h  cost.h  cost_d.c  cost_f0.c  cost_s.c  cost_sp.c  hash.c  hash.h  prsl.c  prsl.h  slot_ctx.c  tom_voicing.c  tom_voicing.h  viterbi.c  viterbi.h
spfy/src/voice/: CMakeLists.txt  api.c  ccos.c  ccos.h  chunk_table.c  chunk_table.h  feat_table.c  feat_table.h  phone_order.c  phone_order.h  unit_table.c  unit_table.h  vcf_loader.c  vcf_matrix.c  vcf_matrix.h  vdb_loader.c  vdb_lookup.c  vdb_lookup.h  vin_loader.c  voice.c  voice.h  voice_runtime.c  voice_runtime.h
spfy/src/wsola/: CMakeLists.txt  stub.c  ulaw.c  ulaw.h  wsola.c  wsola.h
spfy/test/anchor_score/: README.md  anchor_predp_v6.py  anchor_predp_v7.py  build_hpclass_table.py  ccos_parse.py  cklx_ckls_parse.py  vcf_parse.py
spfy/test/diff/: analyze_cart_walker_args.py  ccos_reduction_diff.py  cohort_word_derive.py  compare_cand_totals.py  compare_viterbi_dp.py  ctx_diff_subcluster.py  fe_input_diff.py  gen_audit_md_sections.py  locate_divergence.py  pool_gen_diff.py  residue_to_fn.py  run_replay_corpus.py  stage_compare.py  stage_compare_first.py  triage_audit.py
spfy/test/oracle/: .gitignore  README.md  TRACE_SCHEMA.md  build_phoneid_table.py  capture.py  corpus.jsonl  fe_internal_diff.py  fe_sweep_corpus.py  generate_corpus.py  master_compare.py  master_compare2.py  pos_sweep_corpus.py  run_cart_replay.sh  run_corpus.py  run_frida_capture.py  schema_check.py  server_ctl.py
spfy/test/unit/: CMakeLists.txt  test_common.c
spfy/tools/: baked_fe_to_c.py  baked_pos_to_c.py  capture_pos_disambig.py  cmudict_codegen.py  diff_pre_init_ctrl.py  embed_assets.py  engine_callgraph.py  engine_phoneid_to_c.py  extract_pre_init_ctrl.py  fe_dict_bake.py  fe_dict_repair.py  fe_dict_to_c.py  fe_sweep_aggregate.py  feoracle.py  no_refine_codegen.py  pos_sweep_aggregate.py  voicing_codegen.py
spfy/usel-decomp/: analysis.db
spfy/usel-decomp/reports/: summary.md
spfy/wasm/: .gitignore  CMakeLists.txt  build.bat  build.sh  external_voices.json  package-lock.json  package.json  webpack.config.js
spfy/wasm/src/: spfy_wasm.c
spfy/wasm/stubs/: engine_phoneid.c  engine_phoneid.h  fe_stub.c
spfy/wasm/tools/: compress_dist.mjs  smoke_test.py  stage_voices.py
spfy/wasm/web/: index.html  index.js  styles.css
(+101 files in other folders)
